RESOLVED FIXED201811
REGRESSION (r248592): Leak of CFDictionaryRef in WebKit::NetworkRTCProvider::proxyInfoFromSession()
https://bugs.webkit.org/show_bug.cgi?id=201811
Summary REGRESSION (r248592): Leak of CFDictionaryRef in WebKit::NetworkRTCProvider::...
David Kilzer (:ddkilzer)
Reported 2019-09-15 21:46:19 PDT
Leak of CFDictionaryRef in WebKit::NetworkRTCProvider::proxyInfoFromSession(). Caused by: Bug 200583: User Agent and SessionID should be given to NetworkRTCProvider to set up the correct proxy information <https://bugs.webkit.org/show_bug.cgi?id=200583> <https://trac.webkit.org/changeset/248592/webkit>
Attachments
Patch v1 (3.26 KB, patch)
2019-09-15 21:49 PDT, David Kilzer (:ddkilzer)
no flags
Radar WebKit Bug Importer
Comment 1 2019-09-15 21:48:36 PDT
Radar WebKit Bug Importer
Comment 2 2019-09-15 21:48:38 PDT
David Kilzer (:ddkilzer)
Comment 3 2019-09-15 21:49:03 PDT
Created attachment 378837 [details] Patch v1
WebKit Commit Bot
Comment 4 2019-09-15 22:51:56 PDT
Comment on attachment 378837 [details] Patch v1 Clearing flags on attachment: 378837 Committed r249889: <https://trac.webkit.org/changeset/249889>
WebKit Commit Bot
Comment 5 2019-09-15 22:51:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.