REGRESSION (r248592): Leak of CFDictionaryRef in WebKit::NetworkRTCProvider::proxyInfoFromSession() <https://webkit.org/b/201811>

Reviewed by Youenn Fablet.

* NetworkProcess/webrtc/NetworkRTCProvider.mm:
(WebKit::NetworkRTCProvider::proxyInfoFromSession): Use
RetainPtr<> to fix the leak.


Canonical link: https://commits.webkit.org/215443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249889 268f45cc-cd09-0410-ab3c-d52691b4dbfc